# aiwars-boomtown

./: Cargo.toml  Dockerfile  README.md  game.toml
.github/workflows/: deploy-njgn1k.yml
demo/: game.js  index.html
src/: boomtown.rs  control.rs  lib.rs  main.rs  mcp.rs  view.rs
view/: app.js  index.html
